# norlab_custom_interfaces

./: CMakeLists.txt  README.md  package.xml
controller_msgs/: CMakeLists.txt  package.xml
controller_msgs/action/: FollowPath.action
falcon_msgs/: CMakeLists.txt  package.xml
falcon_msgs/action/: PhotoTarget.action
msg/: BatteryLog.msg  EncoderState.msg  MotorState.msg
mstar_msgs/: CMakeLists.txt  package.xml
mstar_msgs/srv/: MapTraj.srv  PlayLoop.srv
roboclaw_msgs/: CMakeLists.txt  package.xml
roboclaw_msgs/msg/: MotorState.msg
sysnergie_msgs/: CMakeLists.txt  package.xml
sysnergie_msgs/msg/: BatteryLog.msg
warthog_msgs/: CMakeLists.txt  package.xml
wiln_msgs/: CMakeLists.txt  package.xml
wiln_msgs/srv/: PlayLoop.srv
