<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboclaw_msgs</name>
  <version>0.0.0</version>
  <description>The roboclaw_msgs package</description>
  <maintainer email="jean-michel.fortin@norlab.ulaval.ca">Jean-Michel Fortin</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>.
  <exec_depend>rosidl_default_runtime</exec_depend>.
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
